started main semantic layout

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,1 +1,17 @@
 @import "tailwindcss";
+
+#root {
+  @apply flex flex-col h-screen;
+}
+body {
+  @apply bg-gray-100;
+}
+h1 {
+  @apply text-black text-3xl font-bold text-center my-4;
+}
+h2 {
+  @apply text-black text-2xl font-bold text-center my-4;
+}
+h3 {
+  @apply text-black text-xl font-bold text-center my-4;
+}
